--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  stream_video_flutter: ^0.6.0
-  stream_video_push_notification: ^0.6.0
+  stream_video_flutter: ^0.8.0
+  stream_video_push_notification: ^0.8.0
   firebase_messaging: ^15.1.3
   firebase_core: ^3.6.0
-  flutter_ringtone_player: ^3.2.0
   rxdart: ^0.28.0
   firebase_auth: ^5.5.0
+  stream_video: ^0.8.0
+  flutter_secure_storage: ^5.0.0
+  http: ^1.3.0
+  flutter_libphonenumber: ^2.5.1
+
+  # QRscreen dependencies below
+  qr_flutter: ^4.1.0  # For generating QR codes
+  path_provider: ^2.1.1  # For accessing device directories
+  image: ^4.1.3  # For image processing
+  share_plus: ^7.2.1 
 
 dev_dependencies:
   flutter_test:
